--- a/main.css
+++ b/main.css
@@ -1,8 +1,11 @@
 header {
+    position: sticky;
+    top: 0;
     padding: 20px;
     display: flex;
     justify-content:space-evenly;
     align-items: center;
+    background: rgba(255, 255, 255, 0.98);
 }
 
 body {
@@ -11,13 +14,14 @@ body {
     margin: 0;
 }
 
-.header_logo {
+.header__logo {
     height: 35px;
 }
 
 a {
     text-decoration: none;
     color: #213053;
+    transition: color 0.3s ease;
 }
 
 header a {
@@ -37,11 +41,18 @@ button {
     cursor:pointer;
     box-shadow: 0 5px 36px rgb(52 210 68 / 22%);
     padding: 15px;
+    transition: background-color 0.3s ease;
 }
-.about_panel {
+
+button:hover {
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+}
+
+.about__panel {
     width: 500px;
 }
-.about_sun {
+.about__sun {
     width: 100px;
     height: 100px;
     display: flex;
@@ -80,6 +91,121 @@ button {
     margin-top:20px;
 }
 
-.about_info {
+.about__info {
     max-width: 550px;
+}
+
+.form__container {
+    width: 550px;
+}
+
+.form {
+    display: flex;
+    justify-content:center;
+    background-color: #1D263A;
+    color:#fff;
+    padding-top:115px;
+    padding-bottom:115px;
+    text-align: center;
+}
+
+.form h1 {
+    font-size: 48px;
+}
+
+.form p {
+    font-size: 18px;
+    opacity: 0.65;
+}
+
+.form__group {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.form__group label {
+    font-weight: bold;
+}
+
+.form form {
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+}
+
+.form label {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.form input {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px 0 20px;
+    border: none;
+    border-radius: 15px;
+    outline: none;
+}
+
+.form select {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px 0 20px;
+    border: none;
+    border-radius: 15px;
+    appearance: none;
+    outline: none;
+    cursor:pointer;
+}
+
+.form__submit {
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 40px;
+}
+
+footer {
+    padding: 90px 20px 90px 20px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.footer__container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: top;
+}
+
+.footer__copyright {
+    margin-top: 40px;
+    text-align: center;
+    opacity: 0.5;
+}
+
+.footer__group {
+    margin-right: 80px;
+}
+
+.footer__group h3 {
+    font-size: 16px;
+    opacity: 0.7;
+    margin-bottom: 30px;
+}
+
+.footer__links {
+    display: flex;
+    flex-direction: column;
+    cursor:pointer;
+}
+
+.footer__links a {
+    margin-bottom: 15px;
+}
+
+a:hover {
+    color: #f6980c;
 }
